primeira sessao completa - topo

--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
 
         <div class="main-words">
             <h1><span>Audaz</span><br />“A normalidade nunca mudou nada”</h1>
-            <h2>Conheça a história de brasileiros que mudaram suas vidas em apenas 1 ano com a ajuda da StartSe</h2>
+            <h2>Conheça a história de brasileiros que mudaram suas vidas em<br /> apenas 1 ano com a ajuda da StartSe</h2>
             <button>Vagas ilimitadas! Inscreva-se!</button>
         </div>
 
         <div class="sub-words">
-            <div>
+            <div class="local">
                 <span>Local e data</span>
             </div>
             
-            <div>
+            <div class="data">
                 <span>24</span>
                 <span>Agosto</span>
             </div>
 
-            <div>
+            <div class="endereco">
                 <span>Pro Magno centro de eventos</span>
                 <span>São Paulo - SP</span>
             </div>
