primeiros estilos da segunda sessao

--- a/index.html
+++ b/index.html
@@ -58,5 +58,16 @@
 
     </section>
 
+    <section class="second-section">
+        <div class="phrase-wrapper">
+            <p>"Insanidade é continuar fazendo sempre a mesma coisa e esperar resultados diferentes”</p> 
+            <span>Albert Einstein</span>
+        </div>
+
+        <div class="img-wrapper">
+            <img src="/medias/img/albert-einstein.jpg" alt="Foto Albert Einstein">
+        </div>
+    </section>
+
 </body>
 </html>
