refactoring do css grid

--- a/index.html
+++ b/index.html
@@ -38,33 +38,24 @@
         <button>Vagas ilimitadas! Inscreva-se!</button>
     </div>
 
-    <div class="sub-words">
-        <div class="local">
-            <span>Local e data</span>
-        </div>
-        
-        <div class="data">
-            <span>24</span>
-            <span>Agosto</span>
-        </div>
-
-        <div class="endereco">
-            <span>Pro Magno centro de eventos</span>
-            <span>São Paulo - SP</span>
-        </div>
+        <span class="local">Local e data</span>
+    
+    <div class="data">
+        <span>24</span>
+        <span>Agosto</span>
     </div>
 
-<!-- 
-    <section class="second-section">
-        <div class="phrase-wrapper">
-            <p>"Insanidade é continuar fazendo sempre a mesma coisa e esperar resultados diferentes”</p> 
-            <span>Albert Einstein</span>
-        </div>
+    <div class="endereco">
+        <span>Pro Magno centro de eventos</span>
+        <span>São Paulo - SP</span>
+    </div>
 
-        <div class="img-wrapper">
-            <img src="/medias/img/albert-einstein.jpg" alt="Foto Albert Einstein">
-        </div>
-    </section> -->
+    <div class="insanidade-wrapper">
+        <p>"Insanidade é continuar fazendo sempre a mesma coisa e esperar resultados diferentes”</p> 
+        <span>Albert Einstein</span>
+    </div>
+
+    <img class="photo-albert" src="/medias/img/albert-einstein.jpg" alt="Foto Albert Einstein">
 
 </body>
 </html>
