checkpoint dev sexth section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
         </div>
     </div>
 
+    <!-- SIXTH SECTION  -->
 
+    <img class="sixthSec-img" src="/medias/img/alvin-toffler.jpg" alt="Foto Alvin Toffler">
+
+    <div class="sixthSec-texts-wrapper">
+        <h4>“Os analfabetos deste século não são aqueles que não sabem ler ou escrever. Mas os incapazes de aprender, desaprender e aprender de novo”</h4>
+
+        <span>Alvin Toffler</span>
+    </div>
+
+    
 </body>
 </html>
