seventh section checkpoint

--- a/index.html
+++ b/index.html
@@ -115,6 +115,68 @@
         <span>Alvin Toffler</span>
     </div>
 
-    
+    <!-- SEVENTH SECTION -->
+
+    <h3 class="seventhSec-title">Conheça cada um dos <span>speakers</span></h3>
+
+    <div class="speakers-wrapper">
+        <div>
+            <img src="/medias/img/carolina-reis.jpg" alt="Foto Carolina Reis">
+            <span>Carolina Reis</span>
+            <span>@OneSkin</span>
+        </div>
+        <div>
+            <img src="/medias/img/jeremy-gardner.jpg" alt="Foto Jeremy Gardner">
+            <span>Jeremy Gardner</span>
+            <span>@Blockchain Education Network</span>
+        </div>
+        <div>
+            <img src="/medias/img/paula-bellizia.jpg" alt="Foto Paula Bellizia">
+            <span>Paula Bellizia</span>
+            <span>@Microsoft</span>
+        </div>
+        <div>
+            <img src="/medias/img/marco-mastroeni.jpg" alt="Foto Marco Mastroeni">
+            <span>Marco Mastroeni</span>
+            <span>@Banco do Brasil</span>
+        </div>
+    </div>
+
+    <button class="seventhSec-button">Sugerir Palestrante</button>
+
+    <h3 class="seventhSec-subtitle">Inscreva-se já e <span>Garanta seu lugar</span></h3>
+
+    <span class="seventhSec-span">Lorem ipsum dolor sitones ameticones em 12x e sem juros você pode parcelar sem juros em até 3x, aproveite.</span>
+
+    <div class="seventhSec-inscreva-wrapper">
+        <h5>Inscreva-se agora</h5>
+        <hr />
+        <span>em até 12x de</span>
+        <div class="valor">
+            <span>R$</span>
+            <span>93,17</span>
+        </div>
+        <span>ou a vista</span>
+        <div class="valor-vista">
+            <span>R$</span>
+            <span>990,00</span>
+        </div>
+        <button>Comprar</button>
+
+        <div class="bandeiras">
+            <span>X</span>
+            <span>X</span>
+            <span>X</span>
+            <span>X</span>
+            <span>X</span>
+            <span>X</span>
+        </div>
+    </div>
+<!-- 
+    <div class="faq-wrapper">
+        <h5>FAQ - Dúvidas Frequentes</h5>
+        <span>Ficou com alguma dúvida ? Abaixo listamos <span>mais frequentes.</span> Se a sua dúvida nao estiver aqui entre em contato conosco.</span>  
+    </div> -->
+
 </body>
 </html>
