checkpoint ajustes footer

--- a/index.html
+++ b/index.html
@@ -172,11 +172,74 @@
             <span>X</span>
         </div>
     </div>
-<!-- 
-    <div class="faq-wrapper">
+
+    <!-- EIGHTH SECTION -->
+    <div class="eighthSec-title">
         <h5>FAQ - Dúvidas Frequentes</h5>
         <span>Ficou com alguma dúvida ? Abaixo listamos <span>mais frequentes.</span> Se a sua dúvida nao estiver aqui entre em contato conosco.</span>  
-    </div> -->
+    </div>
+
+    <div class="eighthSec-questions">
+        <ul>
+            <li>Vou receber o crachá para credenciamento antes do evento?</li>
+            <li>Há palestras, workshops e interações em horários distintos? Preciso escolher qual participar?</li>
+            <li>Não posso mais participar desse evento, o que faço?</li>
+            <li>Há chapelaria no local?</li>
+            <li>Haverá alguma forma de panfletagem no evento?</li>
+            <li>Há estacionamento no local? Qual o custo?</li>
+            <li>Há custos com alimentação?</li>
+            <li>Quando recebo a nota fiscal de compra do ingresso?</li>
+        </ul>
+    </div>
+
+    <!-- FOOTER  -->
+
+
+    <div class="social-wrapper">
+        <img src="" alt="">
+        <div>
+            <span>Acompanhe-nos em:</span>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </div>
+
+    <div class="contact-wrapper">
+        <div class="atendding">
+            <img src="" alt="">
+            <span>Atendimento</span>
+            <span>Precisa de ajuda?</span>
+            <span>Fale com a StartSe</span>
+        </div>
+
+        <div class="telephones-wrapper">
+            <span>Entre em contato conosco utilizando nosos meios de contatos abaixo</span>
+            <div>
+                <div>
+                    <span>Telefones</span>
+                    <span>(011) 94465-9807 / 99593-1524</span>
+                </div>
+
+                <div>
+                    <span>WhatsApp</span>
+                    <span>(011) 99593-1503</span>
+                </div>
+
+                <div>
+                    <span>E-mail</span>
+                    <span>atendimento@startse.com</span>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="infos">
+        <span>San Francisco, EUA / São Paulo, Brasil / Shanghai, China</span>
+        <span>STARTSE INFORMACOES E SISTEMAS LTDA - ME / CNPJ 24.554.736/0001-70  -  Copyright © StartSe 2014-2019</span>
+    </div>
 
 </body>
 </html>
