ajustes nas versoes com menos resolucao

--- a/index.html
+++ b/index.html
@@ -210,8 +210,10 @@
     </div>
 
     <div class="atendding">
-        <img src="/medias/img/icon-footer.jpg" alt="Icone bate papo">
-        <div>
+        <div class="image-wrapper">
+            <img src="/medias/img/icon-footer.jpg" alt="Icone bate papo">
+        </div>
+        <div class="texts-wrapper">
             <span>Atendimento</span>
             <span>Precisa de ajuda?</span>
             <span>Fale com a StartSe</span>
